tests/enum_from/compile_fail/variant/invalid_source_variant.rs
use enum_convert::EnumFrom;

enum Source {
    Unit,
}

#[derive(EnumFrom)]
#[enum_from(Source)]
enum Target {
    #[enum_from(Source::NonExistent)] // Invalid variant name
    Unit,
}

fn main() {}
